[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Project/UI/QuickCraft.gd" type="Script" id=2]
[ext_resource path="res://src/Project/UI/MoveBox.gd" type="Script" id=3]
[ext_resource path="res://src/Assets/Enemies/test.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="QuickCraft" type="Node2D"]
script = ExtResource( 2 )

[node name="Leftbox" type="Node2D" parent="."]
position = Vector2( 40, 30 )
script = ExtResource( 3 )

[node name="Visuals" type="ReferenceRect" parent="Leftbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="Sprite" type="Sprite" parent="Leftbox/Visuals"]
visible = false
position = Vector2( 40, 30 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Leftbox/Visuals"]
margin_right = 80.0
margin_bottom = 60.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )

[node name="Scales" type="Sprite" parent="Leftbox"]
visible = false
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 29.1352, 10.6001 )
scale = Vector2( 0.172295, 0.172295 )
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="Leftbox"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Leftbox"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Leftbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="Button" type="Button" parent="Leftbox"]
visible = false
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 39.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="ProgressBar" parent="Leftbox"]
visible = false
margin_left = -40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Leftbox/Uses"]
margin_right = 79.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Node2D" parent="Leftbox"]
visible = false
position = Vector2( -40, -30 )
z_index = 10

[node name="Background" type="ColorRect" parent="Leftbox/Tooltip"]
margin_left = -120.0
margin_top = -160.0
margin_right = 120.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="ColorRect" parent="Leftbox/Tooltip"]
margin_left = -117.0
margin_top = -157.0
margin_right = 117.0
margin_bottom = -28.0
color = Color( 0.458824, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Leftbox/Tooltip"]
margin_left = -112.0
margin_top = -157.0
margin_right = 113.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 3 )
text = "aaaaaaaaaaaaaa"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rightbox" type="Node2D" parent="."]
position = Vector2( 140, 30 )
script = ExtResource( 3 )

[node name="Visuals" type="ReferenceRect" parent="Rightbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="Sprite" type="Sprite" parent="Rightbox/Visuals"]
visible = false
position = Vector2( 40, 30 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Rightbox/Visuals"]
margin_right = 80.0
margin_bottom = 60.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )

[node name="Scales" type="Sprite" parent="Rightbox"]
visible = false
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 29.1352, 10.6001 )
scale = Vector2( 0.172295, 0.172295 )
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="Rightbox"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Rightbox"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Rightbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="Button" type="Button" parent="Rightbox"]
visible = false
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 39.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="ProgressBar" parent="Rightbox"]
visible = false
margin_left = -40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Rightbox/Uses"]
margin_right = 79.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Node2D" parent="Rightbox"]
visible = false
position = Vector2( -140, -30 )
z_index = 5

[node name="Background" type="ColorRect" parent="Rightbox/Tooltip"]
margin_left = -120.0
margin_top = -160.0
margin_right = 120.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="ColorRect" parent="Rightbox/Tooltip"]
margin_left = -117.0
margin_top = -157.0
margin_right = 117.0
margin_bottom = -28.0
color = Color( 0.458824, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Rightbox/Tooltip"]
margin_left = -112.0
margin_top = -157.0
margin_right = 113.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 3 )
text = "aaaaaaaaaaaaaa"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Productbox" type="Node2D" parent="."]
position = Vector2( 240, 30 )
script = ExtResource( 3 )
canMove = false

[node name="Visuals" type="ReferenceRect" parent="Productbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="Background" type="Sprite" parent="Productbox/Visuals"]
visible = false
position = Vector2( 40, 30 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Productbox/Visuals"]
visible = false
position = Vector2( 40, 30 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Productbox/Visuals"]
margin_right = 80.0
margin_bottom = 60.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )

[node name="Scales" type="Sprite" parent="Productbox"]
visible = false
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 29.1352, 10.6001 )
scale = Vector2( 0.172295, 0.172295 )
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="Productbox"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Productbox"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Productbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="Button" type="Button" parent="Productbox"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 39.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="ProgressBar" parent="Productbox"]
visible = false
margin_left = -40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Productbox/Uses"]
margin_right = 79.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Node2D" parent="Productbox"]
visible = false
position = Vector2( 172, 137 )
z_index = 20

[node name="Background" type="ColorRect" parent="Productbox/Tooltip"]
margin_left = -120.0
margin_top = -160.0
margin_right = 120.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="ColorRect" parent="Productbox/Tooltip"]
margin_left = -117.0
margin_top = -157.0
margin_right = 117.0
margin_bottom = -28.0
color = Color( 0.458824, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Productbox/Tooltip"]
margin_left = -112.0
margin_top = -157.0
margin_right = 113.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 280.0
margin_bottom = 80.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
text = "+              ="
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Leftbox/Button" to="Leftbox" method="_on_Button_pressed"]
[connection signal="pressed" from="Rightbox/Button" to="Rightbox" method="_on_Button_pressed"]
[connection signal="pressed" from="Productbox/Button" to="Productbox" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
